--- a/index.html
+++ b/index.html
@@ -155,11 +155,13 @@ h1, h2, h3, h4, h5, h6 {
   <!-- findings Section -->
   <div class="w3-container w3-padding-64" id="findings">
     <h1>Findings</h1><br>
-    <img src="g1.JPG" width="500">
-    <img src="g2.JPEG" width="500">
-    <img src="g3.JPEG" width="500">
-    <img src="g4.JPEG" width="500">
-    <img src="g5.JPG" width="500">
+    <div align="left">
+      <img src="g1.JPG" width="500">
+      <img src="g2.JPEG" width="500">
+      <img src="g3.JPEG" width="500">
+      <img src="g4.JPEG" width="500">
+      <img src="g5.JPG" width="500">
+     </div>
             
       
    
