--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ h1, h2, h3, h4, h5, h6 {
       <img src="g4.JPEG" width="500">
       <img src="g5.JPG" width="500">
      </div>
-            
+    <p>blah blah blah</p>
       
    
 
