--- a/index.html
+++ b/index.html
@@ -156,18 +156,18 @@ h1, h2, h3, h4, h5, h6 {
   <div class="w3-container w3-padding-64" id="findings">
     <h1>Findings</h1><br>
 
-      <img src="g1.JPG" width="500" align="left">
-    <p>blah blah blah</p>
-      <img src="g2.JPEG" width="500" align="left">
-    <p>blah blah blah</p>
-      <img src="g3.JPEG" width="500" align="left">
-    <p>blah blah blah</p>
-      <img src="g4.JPEG" width="500" align="left">
-    <p>blah blah blah</p>
-      <img src="g5.JPG" width="500" align="left">
-    <p>blah blah blah</p>
+      <img src="g1.JPG" width="600" align="left">
+    <p align="right">blah blah blah</p>
+      <img src="g2.JPEG" width="600" align="left">
+    <p align="right">blah blah blah</p>
+      <img src="g3.JPEG" width="600" align="left">
+    <p align="right">blah blah blah</p>
+      <img src="g4.JPEG" width="600" align="left">
+    <p align="right">blah blah blah</p>
+      <img src="g5.JPG" width="600" align="left">
+    <p align="right">blah blah blah</p>
    
-    <p>blah blah blah</p>
+    
       
    
 
