--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ h1, h2, h3, h4, h5, h6 {
     <h1>Findings</h1><br>
 
       <img src="g1.JPG" width="600" align="left">
-    <p align="right">blah blah blah</p>
+    <p align="center">blah blah blah</p>
       <img src="g2.JPEG" width="600" align="left">
     <p align="right">blah blah blah</p>
       <img src="g3.JPEG" width="600" align="left">
