--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@ h1, h2, h3, h4, h5, h6 {
     <h1>Findings</h1><br>
 
       <img src="g1.JPG" width="600" align="left">
-    <p align="center"> All students in this sample group agreed that college made them feel stressed.</p>
+    <p align="right"> All students in this sample group agreed that college made them feel stressed.</p>
       <img src="g2.JPEG" width="600" align="left">
     <p align="center">blah blah blah</p>
       <img src="g3.JPEG" width="600" align="left">
     <p align="center">blah blah blah</p>
       <img src="g4.JPEG" width="600" align="left">
-    <p align=denter">blah blah blah</p>
+    <p align="center">blah blah blah</p>
       <img src="g5.JPG" width="600" align="left">
     <p align="center">blah blah blah</p>
    
