--- a/index.html
+++ b/index.html
@@ -155,7 +155,15 @@ h1, h2, h3, h4, h5, h6 {
   <!-- findings Section -->
   <div class="w3-container w3-padding-64" id="findings">
     <h1>Findings</h1><br>
-
+    <div class="w3-col m6 w3-padding-large w3-hide-small">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+      <img src="g1.JPG" width="600">
+    </div>
       <img src="g1.JPG" width="400" align="left">
     <p align="right"> All students in this sample group agreed that college made them feel stressed.</p><br>
       <img src="g2.JPEG" width="400" align="left">
