--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ h1, h2, h3, h4, h5, h6 {
     <h1>Findings</h1><br>
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <img src="g1.JPG" width="400">
-      <img src="g1.JPG" width="400">
+      <img src="g1.JPG" width="400" align="right">
       <img src="g1.JPG" width="400">
       <img src="g1.JPG" width="400">
       <img src="g1.JPG" width="400">
