--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@ h1, h2, h3, h4, h5, h6 {
     <h1>Findings</h1><br>
     <div class="w3-col m6 w3-padding-large w3-hide-small">
       <img src="g1.JPG" width="300">
-      <img src="g2.JEPG" width="300">
-      <img src="g3.JEPG" width="300">
-      <img src="g4.JEPG" width="300">
+      <img src="g2.JPEG" width="300">
+      <img src="g3.JPEG" width="300">
+      <img src="g4.JPEG" width="300">
       <img src="g5.JPG" width="300">
     </div>
       
