--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ h1, h2, h3, h4, h5, h6 {
       <img src="g5.JPG" width="300">
     </div>
       
+    <img src="g2.JPEG" width="300" align="left">
     <p> All students in this sample group agreed that college made them feel stressed.</p><br>
       
     <p align="center"><br><br><br>blah blah blah</p><br>
