--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ h1, h2, h3, h4, h5, h6 {
   <div class="w3-container w3-padding-64" id="findings">
     <h1>Findings</h1><br>
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-      <img src="g1.JPG" width="300">
+      <img src="g1.JPG" width="300" align="center">
       <img src="Graphs.jpg" width="600" align="left">
     </div>
       
