--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ h1, h2, h3, h4, h5, h6 {
       <h4></h4>
       <p class="w3-text-grey">I created a google form with multiple questions regarding hobbies, stress, and the direct relationship between them. Google forms are anonymous and store the data so that it can be accessed to the person who created it.</p>
         <p class="w3-text-grey">I then shared the link to the form on my social media. I am aware that my sample group was mostly limited to my friends, however, most of my friends are college students and I asked others to share it as well so that I can get the best possible data from the google form.</p><br>
-    
+        <p class="w3-text-grey">My intent of the survey was to examine the correlation of stress and hobbies. “It  has been estimated that illnesses and accidents related to stress account for three-quartters of all time lost from work” (Hanson 11). Students cannot work properly when they are stressed. Hason advises that we should find a positive alternative when we are stressed (Hanson 161)</p>
 <br>      <h4></h4>
       <p class="w3-text-grey"></p><br>
     
